--- a/style.css
+++ b/style.css
@@ -58,3 +58,53 @@ nav ul li a:hover{
 	color: #000;
 	border-radius: 10px;
 }
+
+#heading{
+	width:100%;
+	padding:15px;
+	background: #E0B196;
+}
+#heading h1{
+	text-align: center;
+	font-size: 34pt;
+}
+
+#Categories{
+	width:100%;
+}
+.shoesList{
+	width:100%;
+	padding:20px;
+	display:flex;	
+}
+.product{
+	width:32%;
+	padding:20px;
+	margin:10px;
+	border:2px black solid;
+	color:#000;
+	background:#F6F3F3;
+}
+.product img{
+	width: 100%;
+	height:70%;
+	padding: auto;
+}
+.product h2{
+	text-align: center;
+}
+.product p{
+	text-align: left;
+	padding-left: 10px;
+}
+.product button{
+	background:#A70B56;
+	width: 50%;
+	margin-left: 25%;
+}
+.product a{
+	text-decoration:none;
+	color:#fff;
+	text-align: center;
+	padding:auto;
+}
