--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ nav ul li a:hover{
 .product button{
 	background:#A70B56;
 	width: 50%;
+    height:5%;
 	margin-left: 25%;
 }
 .product a{
@@ -107,4 +108,37 @@ nav ul li a:hover{
 	color:#fff;
 	text-align: center;
 	padding:auto;
+}
+#details{
+	width:100%;
+}
+.info{
+	width:50%;
+	margin:auto;
+
+}
+.info img{
+	width:50%;
+	height:40%;
+	padding:20px;
+	margin-left:20%;
+}
+.info h2{
+	text-align: center;
+	font-size: 40px;
+}
+.info p{
+	text-align: left;
+	padding: 50px;
+}
+.info button{
+	background:#A70B56;
+	width: 50%;
+	margin-left: 25%;
+}
+.info a{
+	text-decoration:none;
+	color:#fff;
+	text-align: center;
+	padding:30px 15px;
 }
