--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -17,6 +17,20 @@
         width: 100%;
         margin:10px;
     }
+    .info img{
+        width:100%;
+        margin:10px;
+    }
+    .info p{
+        padding:10px;
+    }
+    .info h2{
+        font-size: 14pt;
+    }
+    .info button{
+        width:100%;
+        margin-left: 1%;
+    }
 }
 
 
